Minor modification in source code and name change of the rosaria2 node 	modified:   CMakeLists.txt 	modified:   src/rosaria2_node.cpp 	modified:   src/test.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,24 +35,24 @@ rosidl_generate_interfaces(${PROJECT_NAME}
 )
 
 # test binary
-add_executable(${PROJECT_NAME}_debug src/test.cpp src/rosaria2_node.cpp src/laser_publisher.cpp)
-target_include_directories(${PROJECT_NAME}_debug
+add_executable(${PROJECT_NAME}_node src/test.cpp src/rosaria2_node.cpp src/laser_publisher.cpp)
+target_include_directories(${PROJECT_NAME}_node
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<BUILD_INTERFACE:/usr/local/include/Aria>
     $<INSTALL_INTERFACE:include>)
 
-target_link_libraries(${PROJECT_NAME}_debug Aria)
-# target_link_libraries(${PROJECT_NAME}_debug /usr/local/lib/libAria.so)
-ament_target_dependencies(${PROJECT_NAME}_debug rclcpp geometry_msgs std_msgs sensor_msgs nav_msgs std_srvs tf2 tf2_ros tf2_geometry_msgs)
+target_link_libraries(${PROJECT_NAME}_node Aria)
+# target_link_libraries(${PROJECT_NAME}_node /usr/local/lib/libAria.so)
+ament_target_dependencies(${PROJECT_NAME}_node rclcpp geometry_msgs std_msgs sensor_msgs nav_msgs std_srvs tf2 tf2_ros tf2_geometry_msgs)
 
 # declare generated messages as dependencies to force generation before compilation
 # cf. https://discourse.ros.org/t/ros2-how-to-use-custom-message-in-project-where-its-declared/2071
-rosidl_target_interfaces(${PROJECT_NAME}_debug ${PROJECT_NAME} "rosidl_typesupport_cpp")
+rosidl_target_interfaces(${PROJECT_NAME}_node ${PROJECT_NAME} "rosidl_typesupport_cpp")
 
 # install target
 install(TARGETS
-  ${PROJECT_NAME}_debug
+  ${PROJECT_NAME}_node
   DESTINATION lib/${PROJECT_NAME})
 
 
